--- a/.github/workflows/dotnet123123.yml
+++ b/.github/workflows/dotnet123123.yml
@@ -12,8 +12,8 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Printer
-      run: echo Hello World
+      run: dotnet build
