--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - name: Catch exceptions
+      run: dotnet build
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
