--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -20,6 +20,9 @@ jobs:
         dotnet-version: 6.0.x
     - name: Catch exceptions
       run: dotnet build
+    - name: GitEmojies
+      run: echo ":heart:"
+        
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
