--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -1,4 +1,4 @@
-
+﻿
 name: .NET
 
 on:
@@ -18,9 +18,9 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Catch exceptions
-      run: dotnet build ??
-    - name: GitEmojies ?
+    - name: Catch exceptions  📦
+      run: dotnet build
+    - name: GitEmojies ✅
       run: echo ":heart:"
         
     - name: Restore dependencies
