--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -20,8 +20,8 @@ jobs:
         dotnet-version: 6.0.x
     - name: Catch exceptions `:memo:`
       run: dotnet build
-    - name: GitEmojies ✅
-      run: echo ":heart:"
+    - name: GitEmojies `:alien:`
+      run: echo ":alien:"
         
     - name: Restore dependencies
       run: dotnet restore
