--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -18,9 +18,9 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Catch exceptions `:memo:`
+    - name: Catch exceptions `:heart`
       run: dotnet build
-    - name: GitEmojies `:alien:`
+    - name: GitEmojies 📦
       run: echo ":alien:"
         
     - name: Restore dependencies
