--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Catch exceptions ":heart:"
+    - name: Catch exceptions `:heart:`
       run: dotnet build
     - name: GitEmojies 📦
       run: echo ":alien:"
