--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -18,10 +18,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Catch exceptions `:alien:`
+    - name: Catch exceptions 👽️
       run: dotnet build
     - name: GitEmojies 📦
-      run: echo ":alien:"
+      run: echo "Git Emojie -> 📦"
         
     - name: Restore dependencies
       run: dotnet restore
