--- a/ChatService/ChatService.csproj
+++ b/ChatService/ChatService.csproj
@@ -23,4 +23,8 @@
     <Folder Include="logs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
