--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -24,7 +24,7 @@ jobs:
       run: echo "Git Emojie -> 📦"
         
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ChatService.sln
     - name: Build
       run: dotnet build --no-restore
 
