--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ChatService.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build ChatService --no-restore
 
